--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,11 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>React FTW!</title>
 </head>
 <body>
-  <div id="app"></div>
 
-  <script src="/bundle.js"></script>
 </body>
+</html>
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hello Bulma!</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+  </head>
+  <body>
+  <section class="section">
+    <div class="container">
+      <!-- <h1 class="title">
+        Hello World
+      </h1>
+      <p class="subtitle">
+        My first website with <strong>Bulma</strong>!
+      </p> -->
+    </div>
+
+    <div id="app"></div>
+
+    <script src="/bundle.js"></script>
+  </section>
+  </body>
 </html>
