--- a/server/public/index.html
+++ b/server/public/index.html
@@ -15,8 +15,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello Bulma!</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <title>Unicorn</title>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
   <section class="section">
